# sql-shader

./: .gitignore  LICENSE  README.md  THIRD-PARTY-LICENSES.md  _config.yml  asset_manager.js  audio_manager.js  clickhouse_engine.js  clickhouse_shaders.js  coi-serviceworker.js  duckdb_wasm_engine.js  index.html  justfile  main.js  performance_monitor.js  shader_manager.js  ui_manager.js  uniform_builder.js
assets/css/: d3-flame-graph.css  main.css
docker/caddy/: Caddyfile
docker/clickhouse/: enable_profiling.xml  enable_system_log_tables.xml
docker/datafusion/: Cargo.toml  Dockerfile  README.md
docker/datafusion/src/: main.rs
docker/questdb/: server.conf
docs/: adding_a_new_engine.md  architecture.md  clickhouse.md  clickouse.md  datafusion.md  duckdb_wasm.md  getting_started.md  keyboard_shortcuts.md  questdb.md
engines/: engines.json
engines/clickhouse/: clickhouse_engine.js  clickhouse_profiler.js  clickhouse_shaders.js
engines/duckdb_wasm/: duckdb_wasm_engine.js  duckdb_wasm_profiler.js  duckdb_wasm_shaders.js
engines/dummy/: dummy_engine.js
scripts/: font_analyzer.sh  runner.sh  squircle2.sql  worm_hole.sql
src/: asset_manager.js  audio_manager.js  coi-serviceworker.js  help_overlay.js  main.js  performance_monitor.js  shader_manager.js  shader_state_manager.js  ui_manager.js  uniform_builder.js
test/: README.md  WIP_STATUS.md  index.html  run-tests.js  test_clickhouse_formats.html  test_clickhouse_formats.js  test_clickhouse_formats2.html  test_clickhouse_formats2.js  test_duckdb_stats.html  test_duckdb_stats.js  test_flamegraph_grouping.js
(+108 files in other folders)
