[package]
name = "datafusion-http-wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = "43.0.0"
arrow = "53.2.0"
arrow-flight = "53.2.0"
tokio = { version = "1.41", features = ["full"] }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[[bin]]
name = "datafusion-server"
path = "src/main.rs"
